kubernetes-examples/kubernetes-monitoring/alertmanager/am-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  namespace: monitoring
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/path:   '/metrics'
spec:
  selector:
    app: alertmanager
  ports:
    - port: 9093
