kubernetes-examples/kubernetes-monitoring/alertmanager/am-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: alert
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
    certmanager.k8s.io/acme-challenge-type: "http01"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - alertmanager.example.com
    secretName: alertmanager
  rules:
  - host: alertmanager.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: alertmanager
          servicePort: 9093
